表格至頂/照片/館別都OK2

--- a/mybackend/templates/test.html
+++ b/mybackend/templates/test.html
@@ -55,9 +55,10 @@
       flex-direction: column;
       height: calc(100vh - 80px);
     }
+    /* 將標題上下空白縮小為 5px */
     .page-title {
       text-align: center;
-      margin: 20px 0;
+      margin: 5px 0;
       color: var(--primary-color);
       font-size: 2rem;
     }
